src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Application %2F Job Candidate</fullName>
        <description>Applications / Job Candidates Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>First Interview</fullName>
        </values>
        <values>
            <fullName>Hired</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Hired</fullName>
        </values>
        <values>
            <fullName>Schedule Interview</fullName>
        </values>
        <values>
            <fullName>Second Interview</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>External Contact</fullName>
        <description>External Contact from Person / Company</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Job_Reference__c</fullName>
        <formula>Related_Job__r.Name</formula>
        <label>Job Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>IF(NOT(ISBLANK(Related_Job__r.Custom_Job_Title__c)), Related_Job__r.Custom_Job_Title__c,TEXT(Related_Job__r.Job_Title__c))</formula>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Unique_Id__c</fullName>
        <displayFormat>LEAD-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Lead Unique Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Not_Hired_Decision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Candidate informed about our decision of not hiring, to trigger automated e-mail</description>
        <inlineHelpText>To check once the candidate has been informed that he will not be hired</inlineHelpText>
        <label>Not Hired Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Lead_Unique_Id__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Lead_Type__c</columns>
        <columns>Related_Job__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Candidate_Application_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Candidate Application Queue</label>
        <queue>Candidate_Application_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Contact_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>External Contact Queue</label>
        <queue>External_Contact_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Open_Candidates_Queue</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Not Hired</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Candidates</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Candidate_Application</fullName>
        <active>true</active>
        <businessProcess>Application %2F Job Candidate</businessProcess>
        <description>Candidate Application for Job</description>
        <label>Candidate Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Contact</fullName>
        <active>true</active>
        <businessProcess>External Contact</businessProcess>
        <description>External Contact from Person and/or Company</description>
        <label>External Contact</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>